[tool.poetry]
name = "requestor"
version = "1.5.1"
description = "Gen3 Access Request Service"
authors = ["CTDS UChicago <cdis@uchicago.edu>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/uc-cdis/requestor"
include = [
  "NOTICE",
]

[tool.poetry.dependencies]
python = "^3.9"
alembic = "^1.4.2"
authutils = "^5.0.4"
cdislogging = "^=1.0.0"
fastapi = "^0.65.0"
gen3authz = "^1.5.1"
gen3config = "^1.0.0"
httpx = ">=0.20.0,<1.0.0"
jsonschema = "^4.6.0"
psycopg2-binary = "^2.8.5"
pydantic = "^1.8.2"
sniffio = "^1.2.0"
uvicorn = ">=0.11.8,<1.0.0"
gino = {version = "^1.0.1", extras = ["starlette"]}
importlib-metadata = {version = "^1.7.0", python = "<3.8"}
gunicorn = "^20.0.4"

[tool.poetry.dev-dependencies]
mock = "^4.0.3"
pytest = "^6.0.1"
pytest-asyncio = "^0.16.0"
pytest-cov = "^2.8"
requests = "^2.24.0"

[tool.poetry.plugins."requestor.modules"]
"system" = "requestor.routes.system"
"manage" = "requestor.routes.manage"
"query" = "requestor.routes.query"

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"
