[tool.poetry]
name = "requestor"
version = "1.7.1"
description = "Gen3 Access Request Service"
authors = ["CTDS UChicago <cdis@uchicago.edu>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/uc-cdis/requestor"
include = [
  "NOTICE",
]

[tool.poetry.dependencies]
python = "^3.9"
alembic = "^1.4.2"
authutils = "^6.2.1"
cdislogging = "^1.0.0"
fastapi = "^0.65.0"
gen3authz = { path = "./gen3authz-2.0.0.tar.gz"}
gen3config = "^1.0.0"
httpx = ">=0.20.0,<1.0.0"
jsonschema = "^4.6.0"
psycopg2-binary = "^2.8.5"
pydantic = "^1.8.2"
requests = "^2.24.0"
sniffio = "^1.2.0"
uvicorn = ">=0.11.8,<1.0.0"
gino = {version = "^1.0.1", extras = ["starlette"]}
importlib-metadata = {version = "^1.7.0", python = "<3.8"}
gunicorn = "^20.0.4"

[tool.poetry.dev-dependencies]
mock = "^4.0.3"
pytest = "^6.0.1"
pytest-asyncio = "^0.16.0"
pytest-cov = "^2.8"

[tool.poetry.plugins."requestor.modules"]
"system" = "requestor.routes.system"
"manage" = "requestor.routes.manage"
"query" = "requestor.routes.query"

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"
