[tool.poetry]
name = "requestor"
version = "2.0.0"
description = "Gen3 Access Request Service"
authors = ["CTDS UChicago <cdis@uchicago.edu>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/uc-cdis/requestor"
include = [
  "NOTICE",
]

[tool.poetry.dependencies]
# TODO >= instead of ^
python = ">=3.13,<4"
alembic = ">=1"
authutils = "^6.2.1"
cdislogging = "^1.0.0"
fastapi = "<1"
gen3authz = "^2.1.0"
gen3config = "^1.0.0"
httpx = ">=0.20.0,<1.0.0"
jsonschema = "^4.6.0"
psycopg2-binary = "^2.8.5"
pydantic = "^1.8.2"
#python-multipart = "^0.0.9"
requests = "^2.32.0"
sniffio = "^1.2.0"
uvicorn = ">=0.11.8,<1.0.0"
#gino = {version = "^1.0.1", extras = ["starlette"]}
#importlib-metadata = {version = "^1.7.0", python = "<3.8"}
gunicorn = "^22.0.0"
#sqlalchemy = ">=2"
sqlalchemy = { extras = ["asyncio"], version = ">=2" }
pyyaml = ">=6"
starlette = ">=0.50"
asyncpg = "*"

[tool.poetry.group.dev.dependencies]
mock = "^4.0.3"
pytest = ">=9"
pytest-asyncio = "*"
pytest-cov = "^2.8"
deptry = "^0.24.0"

[tool.poetry.plugins."requestor.modules"]
"system" = "requestor.routes.system"
"manage" = "requestor.routes.manage"
"query" = "requestor.routes.query"

[tool.deptry]
known_first_party = ["requestor"]

[tool.deptry.per_rule_ignores]
DEP002 = [
  "gunicorn",  # not imported but used in Dockerfile
  "psycopg2-binary",   # not imported but used by sqlalchemy
]

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"
